Create recipe page & add relative path in index

--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -6,8 +6,6 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="recipes/salmon.html">Honey Garlic Glazed Salmon</a>
+    <h1>Honey Garlic Glazed Salmon</h1>
   </body>
 </html>
