Update main site navigation with relative links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/salmon.html">Honey Garlic Glazed Salmon</a>
+    <ul>
+      <li><a href="recipes/salmon.html">Honey Garlic Glazed Salmon</a></li>
+      <li><a href="recipes/carbonara.html">Pasta Carbonara</a></li>
+      <li><a href="recipes/brulee.html">Creme Brulee</a></li>
+    </ul>
   </body>
 </html>
