Reformat website for css practice & add stylesheet

--- a/recipes/brulee.html
+++ b/recipes/brulee.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Recipes Project</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
@@ -12,12 +13,12 @@
 
     <h2>Description</h2>
 
-    <p>
+    <p class="sub-content">
       An outstandingly simple yet exquisite desert, creme brulee is an outstanding option as a 
       sweet, light dish that can be prepared in batches if necessary. Utilizing just eggs, sugar, 
       vanilla and salt, this french classic proves to easily impress guests at a party or function.
     </p>
-    <p>
+    <p class="sub-content">
       This recipe details how to prepare the custard for the creme brulee, in addition to outlining 
       a safer option to create the carmelized sugar surface on top rather than using a propane torch. 
       All that is required are small ramekins to allow the custard to set in, and an oven with a broiler 
@@ -26,7 +27,7 @@
 
     <h2>Ingredients</h2>
 
-    <ul>
+    <ul class="sub-content">
       <li>2 cups heavy cream</li>
       <li>1 teaspoon vanilla extract</li>
       <li>1/8 teaspoon salt</li>
@@ -36,7 +37,7 @@
 
     <h2>Steps</h2>
 
-    <ol>
+    <ol class="sub-content">
       <li>Heat oven to 325 degrees F.</li>
       <li>In a saucepan, combine cream, vanilla and salt, and cook over low heat until the mixture is heated through.</li>
       <li>In a mixing bowl, beat the egg yolks and combine with the sugar.</li>
