--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Recipes Project</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
@@ -12,13 +13,13 @@
 
     <h2>Description</h2>
 
-    <p>
+    <p class="sub-content">
       Pasta Carbonara is one of the classic pasta dishes that originated from Rome. In Italian, the word 
       <em>carbone</em> means charcoal, drawing similarity between the cracked black pepper scattered on 
       on top of the pasta after garnishing. Nonetheless, carbonara lends itself as an incredibly simple and 
       and inexpensive way to enjoy a traditional roman pasta dish today.
     </p>
-    <p>
+    <p class="sub-content">
       This recipe details how to prepare pasta carbonara in a more modern style using easily accessible and 
       common cooking conventions found in most standard kitchens. In an elegant manner, pasta carbonara is
       considered an amalgamation eggs, hard cheese, cured pork and black pepper into a stand-out pasta dish 
@@ -27,7 +28,7 @@
 
     <h2>Ingredients</h2>
 
-    <ul>
+    <ul class="sub-content">
       <li>1 tablespoon olive oil</li>
       <li>1/2 pound bacon (diced)</li>
       <li>3 eggs</li>
@@ -39,7 +40,7 @@
 
     <h2>Steps</h2>
 
-    <ol>
+    <ol class="sub-content">
       <li>Place a large pot of water on the stove set to HIGH heat.</li>
       <li>As the water reaches a boil, salt the water and add the olive oil to a side sautee pan set to MED-HIGH heat.</li>
       <li>Add the bacon to the pan once the oil is heated and cook the bacon until crispy.</li>
