--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Recipes Project</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
@@ -12,11 +13,11 @@
 
     <h2>Description</h2>
 
-    <p>As one of the more tender, delicate choices of fish available to consumers, 
+    <p class="sub-content">As one of the more tender, delicate choices of fish available to consumers, 
       salmon is an incredibly versatile meal that can be enjoyed in countless styles
       of preparation.
     </p>
-    <p>
+    <p class="sub-content">
       This recipe details how to prepare and sear a salmon filet on the stove in any large
       non-stick pan, as well as offers an excellent honey garlic glaze to enjoy the
       fish with. This recipe can be accompanied by countless sides, my favorites for this
@@ -25,9 +26,9 @@
 
     <h2>Ingredients</h2>
 
-    <h3>For the salmon...</h3>
+    <h3 class="head-content">For the salmon...</h3>
 
-    <ul>
+    <ul class="sub-content">
       <li>2 salmon filets (roughly 6 oz each)</li>
       <li>1/4 teaspoon kosher salt</li>
       <li>1/4 teaspoon black pepper</li>
@@ -35,9 +36,9 @@
       <li>(opt.) 1/8 teaspoon or dash blackening seasoning</li>
     </ul>
 
-    <h3>For the glaze...</h3>
+    <h3 class="head-content">For the glaze...</h3>
     
-    <ul>
+    <ul class="sub-content">
       <li>3 tablespoons butter</li>
       <li>2 teaspoons olive oil</li>
       <li>6 cloves garlic (minced)</li>
@@ -50,7 +51,7 @@
 
     <h2>Steps</h2>
 
-    <ol>
+    <ol class="sub-content">
       <li>Pat salmon dry, then season with salt, pepper, paprika and blackening seasoning (opt.).</li>
       <li>Add butter and oil to large non-stick pan over MED-HIGH heat.</li>
       <li>Once butter melts, add garlic, water, soy sauce, sriracha, honey and lemon juice, cooking down for around 30 seconds.</li>
