--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Recipes Project</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="site-head">Odin Recipes</h1>
 
     <ul>
-      <li><a href="recipes/salmon.html">Honey Garlic Glazed Salmon</a></li>
-      <li><a href="recipes/carbonara.html">Pasta Carbonara</a></li>
-      <li><a href="recipes/brulee.html">Creme Brulee</a></li>
+      <li class="link"><a href="recipes/salmon.html">Honey Garlic Glazed Salmon</a></li>
+      <li class="link"><a href="recipes/carbonara.html">Pasta Carbonara</a></li>
+      <li class="link"><a href="recipes/brulee.html">Creme Brulee</a></li>
     </ul>
   </body>
 </html>
